--- a/_DOTween.Assembly/DOTween43/DOTween43.csproj
+++ b/_DOTween.Assembly/DOTween43/DOTween43.csproj
@@ -64,7 +64,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="UnityEngine">
-      <HintPath>C:\Program Files (x86)\Unity 46\Editor\Data\Managed\UnityEngine.dll</HintPath>
+      <HintPath>..\..\..\Unity_Dll\2018.4.3f1\UnityEngine.dll</HintPath>
       <Private>False</Private>
     </Reference>
   </ItemGroup>
