--- a/_DOTween.Assembly/DOTween46/DOTween46.csproj
+++ b/_DOTween.Assembly/DOTween46/DOTween46.csproj
@@ -62,11 +62,11 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="UnityEngine">
-      <HintPath>C:\Program Files (x86)\Unity 46\Editor\Data\Managed\UnityEngine.dll</HintPath>
+      <HintPath>..\..\..\Unity_Dll\2018.4.3f1\UnityEngine.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="UnityEngine.UI">
-      <HintPath>C:\Program Files (x86)\Unity 46\Editor\Data\UnityExtensions\Unity\GUISystem\4.6.0\UnityEngine.UI.dll</HintPath>
+      <HintPath>..\..\..\Unity_Dll\2018.4.3f1\UnityEngine.UI.dll</HintPath>
       <Private>False</Private>
     </Reference>
   </ItemGroup>
