--- a/_DOTween.Assembly/DOTween50/DOTween50.csproj
+++ b/_DOTween.Assembly/DOTween50/DOTween50.csproj
@@ -62,7 +62,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="UnityEngine">
-      <HintPath>C:\Program Files\Unity\Editor\Data\Managed\UnityEngine.dll</HintPath>
+      <HintPath>..\..\..\Unity_Dll\2018.4.3f1\UnityEngine.dll</HintPath>
       <Private>False</Private>
     </Reference>
   </ItemGroup>
