--- a/_DOTween.Assembly/DOTween43/DOTween43.csproj
+++ b/_DOTween.Assembly/DOTween43/DOTween43.csproj
@@ -64,7 +64,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="UnityEngine">
-      <HintPath>..\..\..\..\Git\hegame.unity.framework\hegame\tool\Unity_Dll\2018.4.0f1\UnityEngine.dll</HintPath>
+      <HintPath>..\UnityDll\UnityEngine.dll</HintPath>
       <Private>False</Private>
     </Reference>
   </ItemGroup>
