--- a/_DOTween.Assembly/DOTween43/DOTween43.csproj
+++ b/_DOTween.Assembly/DOTween43/DOTween43.csproj
@@ -64,7 +64,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="UnityEngine">
-      <HintPath>..\UnityDll\UnityEngine.dll</HintPath>
+      <HintPath>..\..\DLL\UnityEngine.dll</HintPath>
       <Private>False</Private>
     </Reference>
   </ItemGroup>
