--- a/_DOTween.Assembly/DOTween50/DOTween50.csproj
+++ b/_DOTween.Assembly/DOTween50/DOTween50.csproj
@@ -62,7 +62,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="UnityEngine">
-      <HintPath>..\UnityDll\UnityEngine.dll</HintPath>
+      <HintPath>..\..\DLL\UnityEngine.dll</HintPath>
       <Private>False</Private>
     </Reference>
   </ItemGroup>
