--- a/_DOTween.Assembly/DOTweenEditor/DOTweenEditor.csproj
+++ b/_DOTween.Assembly/DOTweenEditor/DOTweenEditor.csproj
@@ -64,11 +64,11 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="UnityEditor">
-      <HintPath>..\UnityDll\UnityEditor.dll</HintPath>
+      <HintPath>..\..\DLL\UnityEditor.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="UnityEngine">
-      <HintPath>..\UnityDll\UnityEngine.dll</HintPath>
+      <HintPath>..\..\DLL\UnityEngine.dll</HintPath>
       <Private>False</Private>
     </Reference>
   </ItemGroup>
