--- a/_DOTween.Assembly/DOTweenUpgradeManager/DOTweenUpgradeManager.csproj
+++ b/_DOTween.Assembly/DOTweenUpgradeManager/DOTweenUpgradeManager.csproj
@@ -41,11 +41,11 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="UnityEditor">
-      <HintPath>..\UnityDll\UnityEditor.dll</HintPath>
+      <HintPath>..\..\DLL\UnityEditor.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="UnityEngine">
-      <HintPath>..\UnityDll\UnityEngine.dll</HintPath>
+      <HintPath>..\..\DLL\UnityEngine.dll</HintPath>
       <Private>False</Private>
     </Reference>
   </ItemGroup>
